# swiss-truth-mcp

./: .env.example  .env.prod.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  README.md  claude_desktop_config.json  docker-compose.prod.yml  docker-compose.yml  manage_claims.py  phase10_benchmark.py  phase10_run.sh  phase11_run.sh  pyproject.toml  run_orchestrator.sh  smithery.yaml  start.sh  stop.sh
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  analyze-dependencies.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  discuss-phase.md  do.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract_learnings.md  fast.md  forensics.md  from-gsd2.md  graphify.md  health.md  help.md  import.md  inbox.md  insert-phase.md  intel.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  new-workspace.md  next.md  (+31 more)
.claude/get-shit-done/references/: artifact-types.md  model-profile-resolution.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/templates/codebase/: structure.md
.claude/get-shit-done/workflows/: ai-integration-phase.md  autonomous.md  complete-milestone.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  new-milestone.md  new-project.md  note.md  plan-phase.md  profile-user.md  research-phase.md  resume-project.md  secure-phase.md  settings.md  sketch.md  spec-phase.md  ui-phase.md  ui-review.md  undo.md  update.md  validate-phase.md  verify-phase.md  verify-work.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md  ROADMAP_GROWTH.md  STATE.md
deploy/: cron-renewal.sh  deploy.sh  doall.sh  migrate-to-hostinger.sh  seed-remote.sh  setup-server.sh  update.sh
integrations/autogen-pkg/: pyproject.toml
integrations/autogen-pkg/src/swiss_truth_autogen/: __init__.py  functions.py
integrations/crewai-pkg/: README.md  pyproject.toml
integrations/crewai-pkg/src/swiss_truth_crewai/: __init__.py  tools.py
integrations/langchain/: example.py  swiss_truth_tools.py
integrations/langchain-pkg/: README.md  pyproject.toml
integrations/langchain-pkg/src/swiss_truth_langchain/: __init__.py  _schemas.py  client.py  retriever.py  toolkit.py  tools.py
integrations/shared/: __init__.py  base_client.py
kanban_service/: Caddyfile  Dockerfile  agents.py  db.py  deploy.sh  docker-compose.yml  main.py  requirements.txt
npm/: package-lock.json  package.json  server.json  server.json.bak  tsconfig.json
npm/src/: index.ts
src/swiss_truth_mcp/: config.py  embeddings.py
src/swiss_truth_mcp/agent/: __init__.py  feedback.py  knowledge_tools.py
src/swiss_truth_mcp/api/: kanban_agents.py  main.py  models.py
src/swiss_truth_mcp/api/routes/: agent.py  anchor.py  api_keys.py  audit.py  auth.py  claims.py  compliance.py  dashboard.py  feed.py  generate.py  graph.py  kanban.py  monitoring.py  n8n.py  pipeline.py  portal.py  quality.py  review.py  search.py  tenants.py  users.py
src/swiss_truth_mcp/audit/: __init__.py  jsonld.py
src/swiss_truth_mcp/auth/: __init__.py  dependencies.py  registration.py  security.py
src/swiss_truth_mcp/blockchain/: anchor.py
src/swiss_truth_mcp/cache/: __init__.py  redis_client.py
src/swiss_truth_mcp/db/: kanban_queries.py  neo4j_client.py  queries.py  schema.py
src/swiss_truth_mcp/integrations/: webhook.py
src/swiss_truth_mcp/mcp_server/: http_server.py  server.py  tools.py
src/swiss_truth_mcp/middleware/: rate_limiter.py  sla_tracker.py
src/swiss_truth_mcp/monitoring/: __init__.py  sla.py
src/swiss_truth_mcp/renewal/: __init__.py  cost_cap.py  worker.py
src/swiss_truth_mcp/seed/: adduser.py  ai_ml_claims.json  climate_claims.json  expirer.py  generator.py  loader.py  multilang.py  seed_data.py  swiss_agriculture_claims.json  swiss_education_claims.json  swiss_energy_claims.json  swiss_finance_claims.json  swiss_health_claims.json  swiss_law_claims.json  swiss_politics_claims.json  swiss_transport_claims.json  world_history_claims.json  world_science_claims.json
src/swiss_truth_mcp/templates/: analytics.html  base.html  coverage.html  dashboard.html  factcheck.html  generate.html  kanban.html  login.html  review_certified.html  review_detail.html  review_list.html  review_renewal.html  stats.html  trust.html  users.html  validators.html
src/swiss_truth_mcp/validation/: auto_pipeline.py  clustering.py  conflict_detect.py  coverage.py  pre_screen.py  source_scoring.py  ssrf.py  trust.py
tests/: conftest.py  docker-compose.test.yml  test_critical_fixes.py  test_integration.py  test_mcp_tools.py  test_pre_screen.py  test_review.py  test_trust.py
workflows/: 01_fact_check_pipeline.json  02_claim_submit_monitor.json  03_daily_digest.json  04_fact_check_qa.json
