[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-truth-mcp"
version = "0.1.2"
description = "Verified knowledge base for AI agents — stop hallucinations with certified, source-backed facts via MCP"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Swiss Truth", email = "hello@swisstruth.org" }]
keywords = ["mcp", "ai", "agents", "knowledge", "fact-checking", "hallucination", "rag", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.26.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "apscheduler>=3.11,<4.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "web3>=6.0.0",
]

[project.urls]
Homepage = "https://swisstruth.org"
Documentation = "https://swisstruth.org/trust"
Repository = "https://github.com/swisstruthorg/swiss-truth-mcp"
"Bug Tracker" = "https://github.com/swisstruthorg/swiss-truth-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
]

[project.scripts]
swiss-truth-mcp  = "swiss_truth_mcp.mcp_server.server:main"
swiss-truth-api  = "swiss_truth_mcp.api.main:main"
swiss-truth-seed   = "swiss_truth_mcp.seed.loader:main"
swiss-truth-expire  = "swiss_truth_mcp.seed.expirer:main"
swiss-truth-adduser  = "swiss_truth_mcp.seed.adduser:main"
swiss-truth-generate = "swiss_truth_mcp.seed.generator:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_truth_mcp"]
