[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-truth-crewai"
version = "0.1.1"
description = "Swiss Truth integration for CrewAI — verified facts for AI agent crews"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Swiss Truth", email = "hello@swisstruth.org" }]
keywords = [
    "crewai", "ai-agents", "fact-checking", "hallucination", "hallucination-prevention",
    "knowledge-base", "rag", "swiss-truth", "mcp", "eu-ai-act", "compliance",
    "verified-facts", "grounding", "swiss-law", "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "crewai>=0.30.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "responses"]

[project.urls]
Homepage = "https://swisstruth.org"
Documentation = "https://swisstruth.org/trust"
Repository = "https://github.com/swisstruthorg/swiss-truth-mcp"
Changelog = "https://github.com/swisstruthorg/swiss-truth-mcp/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_truth_crewai"]
