[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-truth-langchain"
version = "0.2.0"
description = "LangChain tools & retriever for Swiss Truth — certified knowledge base for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Swiss Truth", email = "hello@swisstruth.org" }]
keywords = [
    "langchain", "langgraph", "mcp", "ai", "agents", "fact-checking",
    "hallucination", "knowledge-base", "rag", "retriever", "eu-ai-act",
    "compliance", "grounding", "verified-facts",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "responses"]

[project.urls]
Homepage = "https://swisstruth.org"
Documentation = "https://swisstruth.org/trust"
Repository = "https://github.com/swisstruthorg/swiss-truth-mcp"
Changelog = "https://github.com/swisstruthorg/swiss-truth-mcp/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_truth_langchain"]
